--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API Rest mi agula",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/linuxcarl/mi-.aguila/issues"
   },
-  "homepage": "https://github.com/linuxcarl/mi-.aguila#readme"
+  "homepage": "https://github.com/linuxcarl/mi-.aguila#readme",
+  "dependencies": {
+    "typescript": "^4.0.2"
+  }
 }
