--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/linuxcarl/mi-.aguila#readme",
   "dependencies": {
+    "@types/express": "^4.17.7",
+    "express": "^4.17.1",
     "typescript": "^4.0.2"
   }
 }
