--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "mi-aguila",
   "version": "1.0.0",
-  "description": "API Rest mi agula",
+  "description": "API Rest mi aguila",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "NODE_ENV=production node ./dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only ./api/server.ts",
+    "tslint": "tslint --project tsconfig.json",
+    "prettier:base": "prettier --parser typescript --single-quote",
+    "prettier:check": "npm run prettier:base -- --list-different \"./api/**/*.{ts}\"",
+    "prettier:write": "npm run prettier:base -- --write \"./api/**/*.ts\""
   },
   "repository": {
     "type": "git",
@@ -18,8 +23,22 @@
   },
   "homepage": "https://github.com/linuxcarl/mi-.aguila#readme",
   "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "@types/express": "^4.17.7",
-    "express": "^4.17.1",
+    "husky": "^4.2.5",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
+    "ts-node-dev": "^1.0.0-pre.61",
+    "tslint": "^6.1.3",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier:write"
+    }
   }
 }
