--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "helmet": "^4.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "husky": "^4.2.5",
     "nodemon": "^2.0.4",
