--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.1.0"
+    "helmet": "^4.1.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/swagger-ui-express": "^4.1.2",
     "husky": "^4.2.5",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
