--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "homepage": "https://github.com/linuxcarl/mi-.aguila#readme",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "@types/boom": "^7.3.0",
+    "@types/joi": "^14.3.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
