--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "tslint": "tslint --project tsconfig.json",
     "prettier:base": "prettier --parser typescript --single-quote",
     "prettier:check": "npm run prettier:base -- --list-different \"./api/**/*.{ts}\"",
-    "prettier:write": "npm run prettier:base -- --write \"./api/**/*.ts\""
+    "prettier:write": "npm run prettier:base -- --write \"./api/**/*.ts\"",
+    "test": "cross-env NODE_ENV=test jest --coverage --testTimeout=50000",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -35,10 +37,16 @@
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.12",
+    "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
+    "cross-env": "^7.0.2",
     "husky": "^4.2.5",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.3.0",
     "ts-node-dev": "^1.0.0-pre.61",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
@@ -49,5 +57,14 @@
     "hooks": {
       "pre-commit": "npm run prettier:write"
     }
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ]
   }
 }
