--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "homepage": "https://github.com/linuxcarl/mi-.aguila#readme",
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "@hapi/joi": "^17.1.1",
     "@types/boom": "^7.3.0",
     "@types/joi": "^14.3.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
+    "joi-objectid": "^3.0.1",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
