--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@hapi/boom": "^9.1.0",
     "@hapi/joi": "^17.1.1",
     "@types/boom": "^7.3.0",
+    "@types/hapi__joi": "^17.1.4",
     "@types/joi": "^14.3.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
