--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@types/boom": "^7.3.0",
     "@types/hapi__joi": "^17.1.4",
     "@types/joi": "^14.3.4",
+    "@types/mongoose": "^5.7.36",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "joi-objectid": "^3.0.1",
+    "mongoose": "^5.10.2",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
