--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tsc": "tsc",
     "start": "NODE_ENV=production node ./dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only ./api/server.ts",
+    "seed": "tsnd --respawn --transpile-only ./store/seeder/trips.ts",
     "tslint": "tslint --project tsconfig.json",
     "prettier:base": "prettier --parser typescript --single-quote",
     "prettier:check": "npm run prettier:base -- --list-different \"./api/**/*.{ts}\"",
@@ -36,13 +37,13 @@
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "joi-objectid": "^3.0.1",
-    "mongoose": "^5.10.2",
+    "mongoose": "^5.10.3",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
-    "@types/jest": "^26.0.12",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.13",
     "@types/supertest": "^2.0.10",
     "@types/swagger-ui-express": "^4.1.2",
     "cross-env": "^7.0.2",
@@ -52,7 +53,7 @@
     "prettier": "^2.1.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
-    "ts-node-dev": "^1.0.0-pre.61",
+    "ts-node-dev": "^1.0.0-pre.62",
     "tslint": "^6.1.3",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
